--- a/src/scss/main/_slide-menu.scss
+++ b/src/scss/main/_slide-menu.scss
@@ -42,7 +42,7 @@
     background-color: #fff;
     border: 2px solid #ff3e7877;
     border-radius: 6px;
-    transition: background-color 0.3s, border 1s;
+    transition: background-color 0.3s, border 0.5s;
   }
 
   &__link {
