--- a/src/scss/modals/_menu.scss
+++ b/src/scss/modals/_menu.scss
@@ -8,10 +8,11 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
-  box-shadow: -2px 0px 4px rgba(69, 79, 126, 0.02),
+  box-shadow:
+    -2px 0px 4px rgba(69, 79, 126, 0.02),
     16px 0px 52px rgba(14, 24, 80, 0.2);
   overflow-y: auto;
-  z-index: 20;
+  z-index: 40;
   transition: all 0.3s linear;
   &__header {
     display: flex;
